LFD-61 [web] admin store

--- a/src/app/component/pages/presenter/presenter-session/presenter-session.component.html
+++ b/src/app/component/pages/presenter/presenter-session/presenter-session.component.html
@@ -9,7 +9,6 @@
     <p>active session</p>
   </div>
 
-
-  <app-share-session-code-dialog [visible]="displayShareCodeDialog" (onHide)="onHideShareCodeDialog()" [sessionId]="sessionId" [sessionCode]="sessionCode" ></app-share-session-code-dialog>
+  <app-share-session-code-dialog *ngIf="sessionCode" [visible]="displayShareCodeDialog" (onHide)="onHideShareCodeDialog()" [sessionId]="sessionId" [sessionCode]="sessionCode" ></app-share-session-code-dialog>
 
 </app-content>
