LFD-36 [web] Create header template

--- a/src/app/component/organisms/header/header.component.html
+++ b/src/app/component/organisms/header/header.component.html
@@ -6,4 +6,5 @@
   <h2>LectureFeed</h2>
   <div class="spacer"></div>
   <ng-content></ng-content>
+  <p-inputSwitch [(ngModel)]="dark" (onChange)="onChangeMode()"></p-inputSwitch>
 </div>
