--- a/src/app/component/organisms/header/header.component.scss
+++ b/src/app/component/organisms/header/header.component.scss
@@ -7,22 +7,8 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  margin: 8px 0;
-}
-
 img{
   width: 60px;
-}
-
-p {
-  margin: 0;
 }
 
 .spacer {
@@ -37,12 +23,15 @@ p {
   height: 60px;
   display: flex;
   align-items: center;
-  background-color: #00A091;
+  background-color: var(--primary-color);
   color: white;
   font-weight: 600;
+  color: var(--text-color);
 }
 
 .toolbar img {
   margin: 0 16px;
 }
+
+
 
