--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,9 @@
-/* You can add global styles to this file, and also import other style files */
 @import "~primeicons/primeicons.css";
-@import "~primeng/resources/themes/vela-green/theme.css";
 @import "~primeng/resources/primeng.css";
+
+
+body {
+  background-color: var(--surface-b);
+}
+
+
