LFD-36 [web] Create header template

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,4 +6,9 @@ body {
   background-color: var(--surface-b);
 }
 
+.p-inputswitch-slider{
+  background: var(--text-color-secondary) !important;
+}
+
+
 
