LFD-37 [web] create footer

--- a/src/app/component/organisms/footer/footer.component.html
+++ b/src/app/component/organisms/footer/footer.component.html
@@ -1,1 +1,11 @@
-<p>footer works!</p>
+<footer>
+  <div>
+    <span [routerLink]="'/copyright'">Copyright LectureFeed</span>
+  </div>
+  <div>
+    <span [routerLink]="'/aboutus'">About us</span>
+    <span [routerLink]="'/dataprotection'">Data Protection</span>
+    <span [routerLink]="'/imprint'">Imprints</span>
+  </div>
+</footer>
+
