--- a/src/app/component/organisms/content/content.component.scss
+++ b/src/app/component/organisms/content/content.component.scss
@@ -5,5 +5,10 @@
   max-width: 960px;
   flex-direction: column;
   align-items: center;
+  height: 100%;
+}
+
+:host *{
+  color: var(--text-color);
 }
 
