--- a/src/app/component/organisms/header/header.component.scss
+++ b/src/app/component/organisms/header/header.component.scss
@@ -6,15 +6,12 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
 img{
   width: 60px;
 }
-
 .spacer {
   flex: 1;
 }
-
 .toolbar {
   position: absolute;
   top: 0;
@@ -24,13 +21,14 @@ img{
   display: flex;
   align-items: center;
   background-color: var(--primary-color);
-  color: white;
   font-weight: 600;
   color: var(--text-color);
-}
 
+}
+.toolbar h2,
+.toolbar img{
+  cursor: pointer;
+}
 .toolbar img {
   margin: 0 16px;
 }
-
-
