--- a/src/app/component/pages/error/not-found/not-found.component.html
+++ b/src/app/component/pages/error/not-found/not-found.component.html
@@ -1,1 +1,7 @@
-<p>not-found works!</p>
+<app-header></app-header>
+<app-content>
+  <h1>Sorry! Page are not found.</h1>
+  <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSHQ5ixOl6eXcbpkpY-TGkVy35bAz0FARUvwg&usqp=CAU">
+</app-content>
+
+
