--- a/src/app/component/pages/error/not-found/not-found.component.html
+++ b/src/app/component/pages/error/not-found/not-found.component.html
@@ -1,7 +1,22 @@
 <app-header></app-header>
 <app-content>
   <h1>Sorry! Page not found.</h1>
-  <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSHQ5ixOl6eXcbpkpY-TGkVy35bAz0FARUvwg&usqp=CAU">
+  <pre>
+        _    _
+       | |  | |
+      -| |  | |-
+  _    | |- | |
+-| |   | |  | |-
+ |.|  -| ||/  |
+ | |-  |  ___/
+-|.|   | | |
+ |  \_|| |
+  \____  |
+   |   | |-
+       | |
+      -| |
+       |_|
+  </pre>
 </app-content>
 
 
