--- a/src/app/component/pages/participant/participant-session/paricipant-session.component.html
+++ b/src/app/component/pages/participant/participant-session/paricipant-session.component.html
@@ -7,7 +7,7 @@
     <div class="grid">
       <div class="col">
         <p-card>
-          <app-new-question [questions]="questions" (onCreatedQuestion)="onCreatedQuestion($event)"></app-new-question>
+          <app-new-question [questions]="questions | questionFilterByIds: questionIds" (onCreatedQuestion)="onCreatedQuestionTemplate($event)"></app-new-question>
         </p-card>
       </div>
       <div class="col">
