LFD-42 [web] participant create a question

--- a/src/app/component/pages/participant/participant-session/paricipant-session.component.html
+++ b/src/app/component/pages/participant/participant-session/paricipant-session.component.html
@@ -17,9 +17,7 @@
       </div>
     </div>
     <p-card>
-      Content
+      <app-participant-question-table [questions]="questions" ></app-participant-question-table>
     </p-card>
-
-
   </div>
 </app-content>
