--- a/src/app/component/molecules/question-table-overview/question-table-overview.component.html
+++ b/src/app/component/molecules/question-table-overview/question-table-overview.component.html
@@ -32,15 +32,23 @@
   <ng-template pTemplate="body" let-question>
     <tr>
       <td>{{question.message}}</td>
-      <td>{{question.created}}</td>
+      <td>{{question.created | date: 'h:mm:ss'}}</td>
       <td>{{question.rating}}</td>
-
       <ng-container
         [ngTemplateOutlet]="currentCustomHeader"
         [ngTemplateOutletContext]="{question:question}">
       </ng-container>
-
     </tr>
   </ng-template>
+
+  <ng-template pTemplate="emptymessage">
+    <tr>
+      <td>No questions found.</td>
+      <td></td>
+      <td></td>
+      <td></td>
+    </tr>
+  </ng-template>
+
 </p-table>
 
