LFD-44 [web] Update Question (admin)

--- a/src/app/component/organisms/header/header.component.html
+++ b/src/app/component/organisms/header/header.component.html
@@ -7,5 +7,5 @@
   <h2 [routerLink]="'/'" >LectureFeed</h2>
   <div class="spacer"></div>
   <ng-content></ng-content>
-  <p-inputSwitch [(ngModel)]="dark" (onChange)="onChangeMode()"></p-inputSwitch>
+  <p-inputSwitch [(ngModel)]="dark" (onChange)="onChangeMode()" class="theme-switch" ></p-inputSwitch>
 </div>
