--- a/src/app/component/pages/presenter/presenter-management/presenter-management.component.html
+++ b/src/app/component/pages/presenter/presenter-management/presenter-management.component.html
@@ -1,6 +1,16 @@
 <app-header></app-header>
 <app-content>
-  <p>admin-management works!</p>
-  <p><button (click)="onCreateSession()" >Create Session</button></p>
+
+  <div class="grid justify-content-center">
+    <div class="md:col-3 sm:-m-1">
+      <p-card>
+        <h2>No open Session</h2>
+        <ng-template pTemplate="footer">
+          <button (click)="onCreateSession()" pButton type="button" label="Start Session" ></button>
+        </ng-template>
+      </p-card>
+    </div>
+  </div>
+
 </app-content>
 
