LFD-86 [web] session manager step 1

--- a/src/app/component/organisms/content/content.component.html
+++ b/src/app/component/organisms/content/content.component.html
@@ -1,6 +1,8 @@
 <div class="content" role="main">
   <ng-content></ng-content>
   <p-toast></p-toast>
+  <p-confirmDialog></p-confirmDialog>
+  <app-wait-dialog></app-wait-dialog>
 </div>
 <app-footer></app-footer>
 
