LFD-86 [web] session manager step 1

--- a/src/app/component/organisms/participant-mood-chart/participant-mood-chart.component.html
+++ b/src/app/component/organisms/participant-mood-chart/participant-mood-chart.component.html
@@ -1,1 +1,1 @@
-<p-chart type="line" [data]="basicData" [options]="basicOptions"></p-chart>
+<div echarts [options]="options" [merge]="updateOptions" class="demo-chart"></div>
