LFD-87 [web] Mood Interface

--- a/src/app/component/organisms/participant-mood-slider/participant-mood-slider.component.scss
+++ b/src/app/component/organisms/participant-mood-slider/participant-mood-slider.component.scss
@@ -1,6 +1,7 @@
 :host {
-  min-height: 400px;
-  display: inline-grid;
+  height: 70%;
+  display: flex;
+  justify-content: center;
   padding-left: 20px;
 }
 
