--- a/src/app/component/organisms/participant-mood-chart/participant-mood-chart.component.html
+++ b/src/app/component/organisms/participant-mood-chart/participant-mood-chart.component.html
@@ -1,1 +1,1 @@
-<div echarts [options]="options" [merge]="updateOptions" class="demo-chart"></div>
+<div echarts [options]="options" [merge]="updateOptions" class="mood-chart"></div>
