--- a/src/app/component/pages/participant/participant-session/paricipant-session.component.scss
+++ b/src/app/component/pages/participant/participant-session/paricipant-session.component.scss
@@ -2,14 +2,26 @@
   color: var(--surface-f);
   margin-right: 1em;
 }
+::ng-deep {
 
+  .mood-card  > *,
+  .mood-card  .p-card-body,
+  .mood-card  .p-card-content,
+  .mood-card  .p-card-content > div{
+    height: 100%;
+    //background-color: #447b98;
+  }
+
+}
 
 .mood-content *{
   width: 20%;
+  max-width: 100px;
 }
 
 .mood-content *:first-child{
-  width: 80%;
+  width: 100%;
+  max-width: inherit;
 }
 
 
