--- a/src/app/component/molecules/wait-dialog/wait-dialog.component.html
+++ b/src/app/component/molecules/wait-dialog/wait-dialog.component.html
@@ -3,4 +3,4 @@
   <div class="content" ><h3>{{msg}}</h3><i class="pi pi-spin pi-spinner" style="font-size: 2rem"></i></div>
   <ng-template pTemplate="footer"></ng-template>
 </p-dialog>
-<div *ngIf="visible" class="backdrop" ></div>
+<app-backdrop [visible]="visible" ></app-backdrop>
