--- a/src/app/component/molecules/survey-selector-dialog/survey-selector-dialog.component.html
+++ b/src/app/component/molecules/survey-selector-dialog/survey-selector-dialog.component.html
@@ -3,7 +3,7 @@
 
   <p-tabView>
     <p-tabPanel header="New" [selected]="true">
-      <app-survey-form></app-survey-form>
+      <app-survey-object-form [(template)]="template" (onValid)="onTemplateValid($event)" ></app-survey-object-form>
     </p-tabPanel>
     <p-tabPanel header="old">
 
