--- a/src/app/component/molecules/survey-object-form/survey-object-form.component.html
+++ b/src/app/component/molecules/survey-object-form/survey-object-form.component.html
@@ -4,5 +4,6 @@
   [(question)]="template.question"
   [(duration)]="template.duration"
   [(publishResults)]="template.publishResults"
+  [disabledForm]="disabledForm"
   (onValid)="onChange($event)"
 ></app-survey-form>
