--- a/src/app/component/pages/presenter/presenter-session/presenter-session.component.html
+++ b/src/app/component/pages/presenter/presenter-session/presenter-session.component.html
@@ -3,7 +3,7 @@
 </app-header>
 
 <app-content>
-  <div *ngIf="sessionId">
+  <div *ngIf="getSessionId">
 
     <div class="grid flex-column">
       <div class="col">
@@ -13,7 +13,7 @@
               <app-mood-chart [moodLineValues]="moodLineValues" ></app-mood-chart>
             </p-tabPanel>
             <p-tabPanel header="Servey" [selected]="true">
-              <app-presenter-survey></app-presenter-survey>
+              <app-presenter-survey [sessionId]="getSessionId()" ></app-presenter-survey>
             </p-tabPanel>
           </p-tabView>
         </p-card>
