--- a/src/app/component/molecules/survey-overview/survey-overview.component.html
+++ b/src/app/component/molecules/survey-overview/survey-overview.component.html
@@ -1,11 +1,11 @@
-<p-table [value]="surveys" dataKey="id" responsiveLayout="scroll">
+<p-table [value]="surveys" dataKey="id" responsiveLayout="scroll" sortField="timestamp" [sortOrder]="-1" >
   <ng-template pTemplate="header">
     <tr>
       <th style="width: 3rem"></th>
       <th pSortableColumn="name">Name <p-sortIcon field="name"></p-sortIcon></th>
       <th pSortableColumn="type">Type <p-sortIcon field="type"></p-sortIcon></th>
       <th pSortableColumn="answers">Answers <p-sortIcon field="answers"></p-sortIcon></th>
-      <th>Timestamp</th>
+      <th pSortableColumn="timestamp">Time <p-sortIcon field="timestamp"></p-sortIcon></th>
     </tr>
   </ng-template>
   <ng-template pTemplate="body" let-survey let-expanded="expanded">
@@ -16,7 +16,7 @@
       <td>{{survey.template.name}}</td>
       <td>{{survey.template.type | displaySurveyEnumName}}</td>
       <td>{{survey.answers.length}}</td>
-      <td>{{survey.timestamp | date}}</td>
+      <td>{{survey.timestamp | date : 'hh:mm:ss'}}</td>
     </tr>
   </ng-template>
   <ng-template pTemplate="rowexpansion" let-survey>
@@ -25,15 +25,16 @@
         <div class="p-3">
           <div class="grid">
             <div class="col">
+              <h5>Template</h5>
               <app-survey-object-form [template]="survey.template" [disabledForm]="true" ></app-survey-object-form>
             </div>
             <div class="col">
+              <h5>Answers</h5>
               <app-survey-answer-visualization [survey]="survey" ></app-survey-answer-visualization>
             </div>
           </div>
         </div>
       </td>
     </tr>
-
   </ng-template>
 </p-table>
