LFD-88 [web] Surveys Interface

--- a/src/app/component/molecules/survey-answer-visualization/survey-answer-visualization.component.html
+++ b/src/app/component/molecules/survey-answer-visualization/survey-answer-visualization.component.html
@@ -9,7 +9,7 @@
   </div>
 
   <div *ngIf="isRatingType() || isYesNoType()" >
-    <div echarts [options]="options" class="demo-chart"></div>
+    <div echarts [options]="options" class="answer-visualization"></div>
   </div>
 
 </div>
