--- a/src/app/component/molecules/survey-live-view-dialog/survey-live-view-dialog.component.scss
+++ b/src/app/component/molecules/survey-live-view-dialog/survey-live-view-dialog.component.scss
@@ -2,6 +2,14 @@
   p-dialog > *{
     min-width: 10vh;
   }
+  div.time {
+    display: flex;
+    align-items: center;
+  }
+  div.time p-progressBar{
+    width: 100%;
+    margin-left: 30px;
+  }
 }
 
 
