--- a/src/app/component/pages/presenter/presenter-session/presenter-session.component.html
+++ b/src/app/component/pages/presenter/presenter-session/presenter-session.component.html
@@ -9,10 +9,10 @@
       <div class="col">
         <p-card>
           <p-tabView>
-            <p-tabPanel header="Mood">
+            <p-tabPanel header="Mood" [selected]="true" >
               <app-mood-chart [moodLineValues]="moodLineValues" ></app-mood-chart>
             </p-tabPanel>
-            <p-tabPanel header="Servey" [selected]="true">
+            <p-tabPanel header="Servey">
               <app-presenter-survey [adminSocket]="adminSocket" [sessionId]="getSessionId()" ></app-presenter-survey>
             </p-tabPanel>
           </p-tabView>
