--- a/src/app/component/organisms/presenter-survey/presenter-survey.component.html
+++ b/src/app/component/organisms/presenter-survey/presenter-survey.component.html
@@ -1,6 +1,7 @@
-<app-survey-selector-dialog [(visible)]="visibleSelectorDialog" (onCreateTemplate)="onCreateSurveyByTemplate($event)" (onSelectTemplate)="onCreateBySelectTemplateId($event)" [templates]="templates" ></app-survey-selector-dialog>
+<app-survey-selector-dialog [templates]="templates" [(visible)]="visibleSelectorDialog" (onCreateTemplate)="onCreateSurveyByTemplate($event)" (onSelectTemplate)="onCreateBySelectTemplateId($event)"  ></app-survey-selector-dialog>
 
 <app-survey-live-view-dialog [(template)]="currentSurveyTemplate" [(survey)]="currentSurvey" [(displayResult)]="currentSurveyDisplayResult" (onClose)="onCloseCurrentSurvey()" ></app-survey-live-view-dialog>
 
-<button pButton type="button" label="New" (click)="onClickNew()" ></button>
-<app-survey-overview [surveys]="surveys" ></app-survey-overview>
+<app-survey-overview [surveys]="surveys" >
+  <button pButton type="button" label="Start new" (click)="onClickNew()" ></button>
+</app-survey-overview>
