LFD-90 [server, web] Convenient extensions

--- a/src/app/component/organisms/content/content.component.html
+++ b/src/app/component/organisms/content/content.component.html
@@ -3,6 +3,7 @@
   <p-toast></p-toast>
   <p-confirmDialog></p-confirmDialog>
   <app-wait-dialog></app-wait-dialog>
+  <app-accept-dialog></app-accept-dialog>
 </div>
 <app-footer></app-footer>
 
