--- a/src/app/component/organisms/presenter-create-session-dialog/presenter-create-session-dialog.component.html
+++ b/src/app/component/organisms/presenter-create-session-dialog/presenter-create-session-dialog.component.html
@@ -7,6 +7,6 @@
     </div>
   </div>
   <ng-template pTemplate="footer">
-    <button pButton type="button" label="Create" [disabled]="name.length == 0" (click)="onCreate()" ></button>
+    <button pButton type="button" label="Start" [disabled]="name.length == 0" (click)="onCreate()" ></button>
   </ng-template>
 </p-dialog>
