--- a/src/app/component/pages/participant/participant-session/paricipant-session.component.html
+++ b/src/app/component/pages/participant/participant-session/paricipant-session.component.html
@@ -1,5 +1,10 @@
-<app-header>
-  <button (click)="onClickLogout()" pButton type="button" [label]="nickname" icon="pi pi-power-off" iconPos="right" class="p-button-outlined p-button-rounded p-button-info logout"></button>
+<app-header [(visibleSidebar)]="visibleSidebar" >
+
+  <div class="p-sidebar-element p-sidebar-element-button" (click)="onClickLogout()" >
+    <span class="p-sidebar-element-icon" ><i class="pi pi-power-off"></i></span>
+    <span class="p-sidebar-element-text" >Close Session</span>
+  </div>
+
 </app-header>
 <app-content>
   <div *ngIf="sessionId">
