--- a/src/app/component/pages/presenter/presenter-session/presenter-session.component.html
+++ b/src/app/component/pages/presenter/presenter-session/presenter-session.component.html
@@ -1,4 +1,4 @@
-<app-header [(visibleSidebar)]="visibleSidebar">
+<app-header [(visibleSidebar)]="visibleSidebar" [headerLinkPrefix]="'presenter/'">
 
   <div class="p-sidebar-element p-sidebar-element-button" (click)="onClickOpenWelcomeDialog()" >
     <span class="p-sidebar-element-icon" ><i class="pi pi-info"></i></span>
