--- a/src/app/component/molecules/survey-overview/survey-overview.component.html
+++ b/src/app/component/molecules/survey-overview/survey-overview.component.html
@@ -1,5 +1,5 @@
 <p-table [value]="surveys" dataKey="id" responsiveLayout="scroll" sortField="timestamp" [sortOrder]="-1" >
-  <ng-template pTemplate="caption">
+  <ng-template *ngIf="displayCaption" pTemplate="caption">
     <div class="flex align-items-center justify-content-start">
       <ng-content></ng-content>
     </div>
@@ -7,7 +7,10 @@
   <ng-template pTemplate="header">
     <tr>
       <th style="width: 3rem"></th>
-      <th pSortableColumn="name">Name <p-sortIcon field="name"></p-sortIcon></th>
+      <th pSortableColumn="name">Name
+        <p-sortIcon field="name"></p-sortIcon>
+        <p-columnFilter type="text" field="name" display="menu"></p-columnFilter>
+      </th>
       <th pSortableColumn="type">Type <p-sortIcon field="type"></p-sortIcon></th>
       <th pSortableColumn="answers">Answers <p-sortIcon field="answers"></p-sortIcon></th>
       <th pSortableColumn="timestamp">Time <p-sortIcon field="timestamp"></p-sortIcon></th>
