--- a/src/app/component/organisms/header/header.component.html
+++ b/src/app/component/organisms/header/header.component.html
@@ -4,7 +4,7 @@
     alt="LectureFeed"
     src="assets/lecturefeed_logo.svg"
   />
-  <h2 [routerLink]="'/'" >LectureFeed</h2>
+  <h2 [routerLink]="getHeaderLink()" >LectureFeed</h2>
   <div class="spacer"></div>
   <button pButton pRipple type="button" icon="pi pi-ellipsis-v" pTooltip="Settings" styleClass="p-button-sm" class="p-button-rounded p-button-text p-button-secondary" (click)="onCloseSidebar()"></button>
 
