--- a/src/app/component/pages/presenter/presenter-session/presenter-session.component.html
+++ b/src/app/component/pages/presenter/presenter-session/presenter-session.component.html
@@ -16,7 +16,7 @@
 <app-content>
   <div *ngIf="getSessionId">
 
-    <app-share-session-code-dialog *ngIf="sessionCode" [visible]="displayShareCodeDialog" (onHide)="onHideShareCodeDialog()" [sessionId]="sessionId" [sessionCode]="sessionCode" ></app-share-session-code-dialog>
+    <app-share-session-code-dialog *ngIf="sessionCode" [(visible)]="displayShareCodeDialog" (onHide)="onHideShareCodeDialog()" [sessionId]="sessionId" [sessionCode]="sessionCode" ></app-share-session-code-dialog>
 
     <div class="grid flex-column">
       <div class="col">
@@ -25,8 +25,11 @@
             <p-tabPanel header="Mood" [selected]="true" >
               <app-mood-chart [moodLineValues]="moodLineValues" ></app-mood-chart>
             </p-tabPanel>
-            <p-tabPanel header="Servey">
+            <p-tabPanel header="Servey" >
               <app-presenter-survey [adminSocket]="adminSocket" [sessionId]="getSessionId()" ></app-presenter-survey>
+            </p-tabPanel>
+            <p-tabPanel header="Participants" >
+              <app-participant-table [participants]="participants" ></app-participant-table>
             </p-tabPanel>
           </p-tabView>
         </p-card>
