LFD-95 [Web] display session mood data

--- a/src/app/component/pages/presenter/presenter-session-data/presenter-session-data.component.html
+++ b/src/app/component/pages/presenter/presenter-session-data/presenter-session-data.component.html
@@ -14,7 +14,7 @@
 
       <div class="col">
         <p-card header="Mood" >
-          Mood
+          <app-mood-data-chart displayLineLabel="Average" [moodEntities]="getMoodEntities()"  ></app-mood-data-chart>
         </p-card>
       </div>
 
