--- a/src/app/component/pages/presenter/presenter-session/presenter-session.component.html
+++ b/src/app/component/pages/presenter/presenter-session/presenter-session.component.html
@@ -22,13 +22,13 @@
       <div class="col">
         <p-card>
           <p-tabView>
-            <p-tabPanel header="Mood"  >
+            <p-tabPanel header="Mood" [selected]="true" >
               <app-mood-chart [moodLineValues]="moodLineValues" ></app-mood-chart>
             </p-tabPanel>
             <p-tabPanel header="Servey" >
               <app-presenter-survey [adminSocket]="adminSocket" [sessionId]="getSessionId()" ></app-presenter-survey>
             </p-tabPanel>
-            <p-tabPanel header="Participants" [selected]="true" >
+            <p-tabPanel header="Participants" >
               <app-participant-connection-table [participants]="participants" (onSelectParticipant)="onKillParticipant($event)" ></app-participant-connection-table>
             </p-tabPanel>
           </p-tabView>
