LFD-113 [web] security bug

--- a/src/app/component/organisms/header/header.component.html
+++ b/src/app/component/organisms/header/header.component.html
@@ -1,6 +1,6 @@
 <div class="toolbar" role="banner">
   <img
-    [routerLink]="'/'"
+    [routerLink]="getHeaderLink()"
     alt="LectureFeed"
     src="assets/lecturefeed_logo.svg"
   />
