LFD-114 [web] display version number

--- a/src/app/component/organisms/header/header.component.html
+++ b/src/app/component/organisms/header/header.component.html
@@ -27,4 +27,5 @@
       <p-inputSwitch [(ngModel)]="dark" (onChange)="onChangeMode()" class="theme-switch" ></p-inputSwitch>
     </div>
   </div>
+  <span class="version" >{{version}}</span>
 </p-sidebar>
